# tactix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Tactix.sln  Tactix.uproject  imgui.ini
Content/Characters/UE5_Mannequins/Materials/: M_Mannequin.uasset
Content/Characters/UE5_Mannequins/Materials/Functions/: CA_Mannequin.uasset  ChromaticCurve.uasset  MF_Diffraction.uasset  MF_logo3layers.uasset  ML_BaseColorFallOff.uasset
Content/Characters/UE5_Mannequins/Meshes/: SK_Mannequin.uasset
Content/Characters/UE5_Mannequins/Rigs/: ABP_Manny_PostProcess.uasset  ABP_Quinn_PostProcess.uasset  CR_Mannequin_Procedural.uasset  PA_Mannequin.uasset
Content/Characters/UE5_Mannequins/Textures/Manny/: T_Manny_01_ASAOPMASK_MSK.uasset  T_Manny_01_Tan.uasset  T_Manny_02_Tan.uasset
Content/Characters/UE5_Mannequins/Textures/Quinn/: T_Quinn_01ID_Tan.uasset  T_Quinn_02ID_Tan.uasset
Content/Characters/UE5_Mannequins/Textures/Shared/: T_UE_Logo_M.uasset
Content/DamageSystem/: BPI_Damageable.uasset  BP_HealthComponent.uasset  E_DamageResponse.uasset  E_DamageType.uasset  S_DamageInfo.uasset  W_HealthBar.uasset
Content/DamageSystem/Enemy/: BP_Enemy.uasset
Content/DamageSystem/Player/: BP_Player.uasset
Content/LevelPrototyping/: LevelBlock.uasset  LevelBlock_Traversable.uasset  LevelButton.uasset  LevelVisuals.uasset  Teleporter_Destination.uasset
Content/LevelPrototyping/Data/: S_GridMaterialParams.uasset  S_LevelStyle.uasset
Content/LevelPrototyping/Interactable/DamageZone/: BP_DamageZone.uasset
Content/LevelPrototyping/Interactable/DamageZone/Assets/: NS_Damage.uasset
Content/LevelPrototyping/Interactable/Door/: BP_DoorFrame.uasset
Content/LevelPrototyping/Materials/: Decal_ProjectLogo.uasset  M_Grid.uasset
Content/LevelPrototyping/Textures/: T_Game_Animation_Sample_Text.uasset  T_Game_Animation_Sample_Version.uasset  T_Grid_Crosses.uasset  T_Hologrid.uasset  T_Paint_Diffuse.uasset  T_Paint_Glossiness.uasset  T_Unreal_Logo.uasset
Content/Levels/: Lvl_HomeInvasion.umap  WildlifeTest_Lvl.umap
Content/STTutorial/: AIC_Wildlife.uasset  ST_Wildlife.uasset  WildlifeGamemode.uasset
Content/STTutorial/Conditions/: STCond_DistanceBetweenActors.uasset  STCond_HasPerceivedThreats.uasset
Content/STTutorial/Tasks/: STTask_FocusOnHostile.uasset  STTask_GetFleeLocation.uasset  STTask_GetRandomLocation.uasset
Content/Tactix/Blueprints/: BP_TactixGameMode.uasset
Content/Tactix/Bot/: BP_TactixBot.uasset
Content/Tactix/Characters/Animations/: ABP_TactixPlayerBase.uasset
Content/Tactix/Characters/Animations/Pistol/: AM_MM_DemoPistol_Fire.uasset  AM_MM_DemoPistol_Reload.uasset  AS_MF_Pistol_Idle_ADS.uasset  AS_MF_Pistol_Idle_ADS_AO_CC.uasset  AS_MF_Pistol_Idle_ADS_AO_CD.uasset  AS_MF_Pistol_Idle_ADS_AO_CU.uasset  AS_MF_Pistol_Idle_ADS_AO_LBC.uasset  AS_MF_Pistol_Idle_ADS_AO_LBD.uasset  AS_MF_Pistol_Idle_ADS_AO_LBU.uasset  AS_MF_Pistol_Idle_ADS_AO_LC.uasset  AS_MF_Pistol_Idle_ADS_AO_LD.uasset  AS_MF_Pistol_Idle_ADS_AO_LU.uasset  AS_MF_Pistol_Idle_ADS_AO_RBC.uasset  AS_MF_Pistol_Idle_ADS_AO_RBD.uasset  AS_MF_Pistol_Idle_ADS_AO_RBU.uasset  AS_MF_Pistol_Idle_ADS_AO_RC.uasset  AS_MF_Pistol_Idle_ADS_AO_RD.uasset  AS_MF_Pistol_Idle_ADS_AO_RU.uasset  BS_Pistol_ADS_1D.uasset
Content/Tactix/Characters/Animations/Unarmed/: AS_F_Unarmed_Idle_Break.uasset  AS_F_Unarmed_Idle_Ready.uasset  AS_F_Unarmed_Jog_Bwd.uasset  AS_F_Unarmed_Jog_Bwd_Pivot.uasset  AS_F_Unarmed_Jog_Bwd_Start.uasset  AS_F_Unarmed_Jog_Bwd_Stop.uasset  (+46 more)
Content/Tactix/Input/: IMC_MouseLook.uasset  IMC_TactixDefault.uasset
Content/Tactix/Input/Actions/: IA_Attack.uasset  IA_Jump.uasset  IA_Look.uasset  IA_MouseLook.uasset  IA_Move.uasset  IA_Reload.uasset
Content/Tactix/Input/Touch/: BPI_TouchInterface.uasset  UI_Thumbstick.uasset  UI_TouchSimple.uasset
Content/Tactix/Player/: BP_TactixPlayerBase.uasset  BP_TactixPlayerController.uasset  BP_TactixPlayerDefender.uasset
Content/Tactix/Player/Meshes/: models_characters_soldier_soldier_flashlight.uasset
Content/Tactix/UI/: Crosshair.uasset  CrosshairDot.uasset  WB_Crosshair.uasset
Content/Tactix/Weapons/: BP_TactixWeaponComponent.uasset
Content/Tactix/Weapons/DataAssets/: DA_DemoPistol.uasset
Content/Tactix/Weapons/Guns/: BP_DemoPistol.uasset
Source/: Tactix.Target.cs  TactixEditor.Target.cs
Source/TP_FirstPerson/: TP_FirstPerson.Build.cs  TP_FirstPersonCameraManager.cpp
Source/Tactix/: Tactix.Build.cs  Tactix.cpp  TactixCharacter.cpp  TactixCharacter.h  TactixGameMode.cpp  TactixGameMode.h
Source/Tactix/Characters/: CharacterBase.cpp  CharacterBase.h
Source/Tactix/Components/: HitTraceComponent.cpp  HitTraceComponent.h  WeaponComponent.cpp  WeaponComponent.h
Source/Tactix/DataAssets/: WeaponData.cpp  WeaponData.h
Source/Tactix/Enums/: EDamageResponse.h  EDamageType.h  EWeaponState.h  EWeaponTypes.h
Source/Tactix/Interfaces/: IDamageable.h  ITraceProvider.h  IWeapon.h
Source/Tactix/Player/: EnemyBase.cpp  EnemyBase.h  TactixCameraManager.cpp  TactixCameraManager.h  TactixPlayerController.cpp  TactixPlayerController.h
Source/Tactix/Structures/: DamageInfo.h
Source/Tactix/Weapons/: HitscanWeapon.cpp  HitscanWeapon.h  WeaponBase.cpp  WeaponBase.h
assets/: instanced_circle.vs
c++/: imgui.ini
c++/assets/: instanced_circle.fs
c++/docs/: Design Document.md  Presentation.md  Roadmap.md  Untitled.md
c++/docs/.obsidian/: workspace.json
c++/scripts/: build.sh
c++/src/: JobSystem.hpp  SpatialHash.hpp  main.cpp  platform.h
docs/: Design Document.md  Roadmap.md  iter1.md  iter2.md
docs/.obsidian/: workspace.json
src/: Agent.hpp  JobSystem.cpp  Simulation.cpp  Simulation.hpp  SpatialHash.cpp  main.cpp
tactix-ai/: Cargo.toml
tactix-ai/scenarios/: scenario01.json
tactix-ai/src/: main.rs
tactix-ai/src/agent/: agent.rs  decision.rs  mod.rs
tactix-ai/src/combat/: weapon.rs
tactix-ai/src/map/: cover.rs  mod.rs
tactix-ai/src/scenario/: loader.rs
tactix-ai/src/simulation/: config.rs  mod.rs  world.rs
tactix-ai/src/utils/: mod.rs
tactix-ai/src/utls/: math.rs  mod.rs  rng.rs
tactix-ai/src/world/: mod.rs
(+63 files in other folders)
